hard-gists/651afb13d45e4c587f63/run.log
=== Docker Run Log for 651afb13d45e4c587f63 ===
Started at: Mi 29. Okt 16:34:39 CET 2025

[2025-10-29 16:34:39] START: Running container for 651afb13d45e4c587f63
[2025-10-29 16:34:39] SUCCESS: Container d16257a11325d1745b863dad7deded3b74ee0015174b2692c0805f591a875b67 started for 651afb13d45e4c587f63
=== Container logs for 651afb13d45e4c587f63 ===
  File "/snippet.py", line 163
    print "epoch", i, "train", train_cost, "val", val_cost
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 651afb13d45e4c587f63 ===
[2025-10-29 16:34:41] INFO: Container d16257a11325d1745b863dad7deded3b74ee0015174b2692c0805f591a875b67 has stopped
